--- a/src/app/features/organizations/org-dialog/org-dialog.component.html
+++ b/src/app/features/organizations/org-dialog/org-dialog.component.html
@@ -46,7 +46,7 @@
           </div>
         }
         @if (activeTab === 'create') {
-          <app-create-tab></app-create-tab>
+          <app-create-tab (onOrgCreated)="onOrgCreated($event)"></app-create-tab>
         }
         @if (activeTab === 'join') {
           <div class="text-white">
