--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,8 @@
     width: 100%;
     height: 100%;
   }
+
+  html, body {
+    overscroll-behavior: none;
+    background: var(--background-color);
+  }
