org explaination startec

--- a/src/app/features/organizations/organizations.component.html
+++ b/src/app/features/organizations/organizations.component.html
@@ -2,4 +2,5 @@
 <div class="w-[85%] m-auto mt-10">
     <app-org-nav></app-org-nav>
     <app-org-cards></app-org-cards>
+    <app-org-explain></app-org-explain>
 </div>
