--- a/src/app/features/organizations/org-cards/org-cards.component.html
+++ b/src/app/features/organizations/org-cards/org-cards.component.html
@@ -43,7 +43,7 @@
                 <p class="text-sm text-white">1/10 members</p>
             </div>
 
-            <p-progressbar color="var(--primary-color)" showValue="false" [value]="10" [style]="{
+            <p-progressbar color="var(--primary-color)" showValue="false" [value]="10 * (organization.members ?? 0)" [style]="{
               backgroundColor: '#10172A',
               borderRadius: '10px',
               height: '10px',
@@ -54,7 +54,7 @@
             <div class="flex items-center justify-around mt-6">
                 <div class="flex flex-col items-center gap-1">
                     <i class="pi pi-users text-[#7F8DA3] text-sm"></i>
-                    <p class="text-xs text-[#7F8DA3]">1 Total</p>
+                    <p class="text-xs text-[#7F8DA3]">{{organization.members}} Total</p>
                 </div>
                 <div class="flex flex-col items-center gap-1">
                     <i class="pi pi-crown text-[#7F8DA3] text-xs"></i>
