--- a/src/app/layout/components/home/home.component.html
+++ b/src/app/layout/components/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="bg-[var(--background-color)] h-screen w-screen overflow-auto">
     <app-navbar></app-navbar>
-    <app-organizations></app-organizations>
+    <router-outlet></router-outlet>
 </div>
