--- a/src/app/features/organizations/org-header/org-header.component.html
+++ b/src/app/features/organizations/org-header/org-header.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center w-full text-center mt-16">
+<div class="flex flex-col items-center justify-center w-full text-center ">
     <div class="logo  w-15 h-15 p-3 rounded-xl mt-6 bg-gradient-to-br from-blue-500 to-purple-600" >
         <img src="images/logo.svg" alt="logo" >
     </div>
