--- a/src/app/features/organizations/org-cards/org-cards.component.html
+++ b/src/app/features/organizations/org-cards/org-cards.component.html
@@ -1,7 +1,8 @@
 <div class="py-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
     @for (organization of organizations; track organization.id) {
     <div
-        class="flex flex-col justify-between w-full h-[330px] border border-[var(--gray-default-color)] rounded-[11px] p-6">
+        (click)="onClickOrg(organization.id)"
+        class="flex flex-col justify-between w-full h-[330px] border border-[var(--gray-default-color)] rounded-[11px] p-6 cursor-pointer">
         <div>
             <div class="flex items-center gap-4">
                 <div class="w-12 h-12 bg-[#0F1629] rounded-full flex items-center justify-center">
@@ -36,7 +37,7 @@
                     
                 </div>
                 <div class="flex-1"></div>
-                <a class="cursor-pointer" [routerLink]="['/organizations', organization.id]">
+                <a class="cursor-pointerj" [routerLink]="['/organizations', organization.id]">
                     <i class="pi pi-cog text-white"></i>
                 </a>
             </div>
