--- a/src/app/layout/components/navbar/navbar.component.html
+++ b/src/app/layout/components/navbar/navbar.component.html
@@ -1,6 +1,11 @@
-<div class="fixed top-0 left-0 right-0 h-16 bg-[var(--background-color)] border-b border-[#1d283a] flex items-center px-6 z-10">     
+<div class="main-container fixed top-0 left-0 right-0 h-16 bg-[var(--background-color)] border-b border-[#1d283a] flex items-center px-6 z-10">     
     <div
-        class="h-[60%] w-1/3 border border-[var(--gray-default-color)] rounded-[11px] hover:bg-[var(--gray-default-color)] transition-all duration-300 cursor-pointer">
-
+        class="h-[60%] w-1/3 border border-[var(--gray-default-color)] rounded-[11px] hover:bg-[var(--gray-default-color)] hover:text-white transition-all duration-300 cursor-pointer flex items-center gap-3" (click)="showOrgDialog()">
+        <i class="pi pi-search text-[#7F8DA3] ml-3"  style="font-size: 0.9rem"></i> 
+        <p class="text-[#7F8DA3] text-sm" >
+            Search Organizations To join...
+        </p>
     </div>
 </div>  
+
+<app-org-dialog [(visible)]="visible"></app-org-dialog>
