basic layout css changes

--- a/src/app/features/organizations/organizations.component.html
+++ b/src/app/features/organizations/organizations.component.html
@@ -1,6 +1,6 @@
-<app-org-header></app-org-header>
-<div class="w-[85%] m-auto mt-10">
-    <app-org-nav></app-org-nav>
-    <app-org-cards></app-org-cards>
-    <app-org-explain></app-org-explain>
+<div class="my-10">
+    <app-org-header></app-org-header>
 </div>
+<app-org-nav></app-org-nav>
+<app-org-cards></app-org-cards>
+<app-org-explain></app-org-explain>
