--- a/src/app/layout/components/home/home.component.html
+++ b/src/app/layout/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="bg-[var(--background-color)] h-screen w-screen overflow-auto">
     <app-navbar></app-navbar>
-    <div class=" m-auto mt-16">
+    <div class=" m-auto mt-16 w-[85%]">
         <router-outlet></router-outlet>
     </div>
 </div>
