--- a/src/app/features/organizations/org-manage/org-manage.component.html
+++ b/src/app/features/organizations/org-manage/org-manage.component.html
@@ -19,10 +19,10 @@
                 <!-- Info -->
                 <div>
                   <div class="flex items-center space-x-2">
-                    <h2 class="text-xl font-bold">test</h2>
+                    <h2 class="text-xl font-bold">{{org?.name}}</h2>
                     <span>👑</span>
                   </div>
-                  <p class="text-gray-400">asdf</p>
+                  <p class="text-gray-400">{{org?.description}}</p>
                   <div class="flex space-x-2 mt-2">
                     <span class="px-2 py-0.5 bg-gray-800 rounded-full text-xs">owner</span>
                     <span class="px-2 py-0.5 bg-gray-800 rounded-full text-xs">free</span>
