custom tab component created

--- a/src/app/features/organizations/org-dialog/org-dialog.component.html
+++ b/src/app/features/organizations/org-dialog/org-dialog.component.html
@@ -13,20 +13,7 @@
       </ng-template>
       <p class="text-[#7F8DA3]">Organizations help you manage teams and collaborate on projects</p>
 
-      <!-- Simple HTML Tabs with Tailwind -->
-      <div class="bg-[#0F1629] rounded-xl p-1 flex gap-1 mt-6">
-        @for (tab of tabs; track $index) {
-          <button 
-            [class]="tabCss"
-            [class.bg-[var(--background-color)]]="activeTab === tab"
-            (click)="activeTab = tab"
-          >
-            {{tab.charAt(0).toUpperCase() + tab.slice(1)}}
-          </button>
-        }
-      </div>
-      <!-- Tab Content -->
-      <div class="mt-6">
+      <app-custom-tabs [tabs]="['overview', 'create', 'join']" [activeTab]="activeTab" (activeTabChange)="activeTab = $event">
         @if (activeTab === 'overview') {
           <div class="text-white">
             <p class="m-0">Content for Overview tab.</p>
@@ -40,7 +27,7 @@
             <p class="m-0">Content for Join tab.</p>
           </div>
         }
-      </div>
-
+      </app-custom-tabs>
+      
   
 </p-dialog>
