--- a/src/app/features/organizations/org-header/org-header.component.html
+++ b/src/app/features/organizations/org-header/org-header.component.html
@@ -4,5 +4,5 @@
     </div>
 
     <h1 class="my-6 lg:text-4xl px-2 text-2xl font-bold text-white">Welcome to Your Organizations</h1>
-    <p class="lg:w-[45%] px-4 w-full text-[#7F8DA3] lg:text-xl">Select your organization to access your workspace, or create a new one to get started.</p>
+    <p class="lg:w-[45%] px-4 w-full text-[var(--gray-text-color)] lg:text-xl">Select your organization to access your workspace, or create a new one to get started.</p>
 </div>
