--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
     --default-color: #4b5563;
     --background-color: #020611;
     --gray-default-color: #1d283a;
+    --gray-text-color: #7F8DA3;
   }
 
   img {
