--- a/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
+++ b/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
@@ -6,6 +6,8 @@
         class="w-full px-4 py-2 border border-[#1d283a] rounded-xl text-white placeholder-[var(--gray-text-color)] placeholder:text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" />
 </div>
 
-<div>
-
+<div
+    class="mt-6 border-[var(--gray-default-color)] border border-dashed rounded-xl py-6 flex flex-col items-center justify-center gap-2">
+    <i class="pi pi-search text-[var(--gray-text-color)]" style="font-size: 1.6rem;"></i>
+    <p class="text-[var(--gray-text-color)] text-base ">Enter an organization name to search</p>
 </div>
