--- a/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
+++ b/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
@@ -3,11 +3,45 @@
         Search Organizations
     </label>
     <input type="text" placeholder="Search by name or description"
-        class="w-full px-4 py-2 border border-[#1d283a] rounded-xl text-white placeholder-[var(--gray-text-color)] placeholder:text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" />
+        class="w-full px-4 py-2 border border-[#1d283a] rounded-xl text-white placeholder-[var(--gray-text-color)] placeholder:text-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
+        [formControl]="searchKeyword" (keyup)="searchOrganizations()" />
 </div>
 
+@if(organizations.length === 0) {
 <div
     class="mt-6 border-[var(--gray-default-color)] border border-dashed rounded-xl py-6 flex flex-col items-center justify-center gap-2">
     <i class="pi pi-search text-[var(--gray-text-color)]" style="font-size: 1.6rem;"></i>
-    <p class="text-[var(--gray-text-color)] text-base ">Enter an organization name to search</p>
+    <p class="text-[var(--gray-text-color)] text-base ">{{ message }}</p>
 </div>
+} @else {
+<label class="block text-white text-base font-medium mb-3 mt-4">
+    Search Results
+</label>
+@for(organization of organizations; track organization.id) {
+<div class="flex items-center justify-between text-white rounded-xl border border-gray-800 p-4 w-full ">
+    <div class="flex items-center space-x-4">
+        <div
+            class="flex items-center justify-center w-10 h-10 rounded-full bg-[var(--primary-color)] text-white font-semibold">
+            {{ organization.name  | firstLetterOfWords }}
+        </div>
+        <div>
+            <h2 class=" text-base">{{ organization.name }}</h2>
+            <p class="text-[var(--gray-text-color)] text-sm">{{ organization.description }}
+            </p>
+            <div class="flex items-center space-x-2 mt-2">
+                <span class="text-[var(--gray-text-color)] text-xs">0 members</span>
+                <span class="text-xs px-2 py-0.5 border border-[var(--gray-default-color)] rounded-full">pro</span>
+                <span
+                    class="flex items-center text-xs px-2 py-0.5 border border-[var(--gray-default-color)] rounded-full">
+                    Private
+                </span>
+            </div>
+        </div>
+    </div>
+
+    <button class="bg-[var(--primary-color)] text-sm text-black px-3 py-2 rounded-xl font-medium">
+        Join
+    </button>
+</div>
+}
+}
