--- a/src/app/features/organizations/org-manage/org-manage.component.html
+++ b/src/app/features/organizations/org-manage/org-manage.component.html
@@ -81,3 +81,27 @@
   </div>
 
 </div>
+
+<app-custom-tabs [tabs]="tabs" [activeTab]="activeTab" (activeTabChange)="onTabChange($event)">
+  @if(activeTab === 'overview') {
+    <div>
+      <h1 class="text-white text-2xl font-bold">Overview</h1>
+    </div>
+  } @else if(activeTab === 'members') {
+    <div>
+      <h1 class="text-white text-2xl font-bold">Members</h1>
+    </div>
+  } @else if(activeTab === 'settings') {
+    <div>
+      <h1 class="text-white text-2xl font-bold">Settings</h1>
+    </div>
+  } @else if(activeTab === 'analytics') {
+    <div>
+      <h1 class="text-white text-2xl font-bold">Analytics</h1>
+    </div>
+  } @else if(activeTab === 'activity') {
+    <div>
+      <h1 class="text-white text-2xl font-bold">Activity</h1>
+    </div>
+  }
+</app-custom-tabs>
