--- a/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
+++ b/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
@@ -29,7 +29,7 @@
             <p class="text-[var(--gray-text-color)] text-sm">{{ organization.description }}
             </p>
             <div class="flex items-center space-x-2 mt-2">
-                <span class="text-[var(--gray-text-color)] text-xs">0 members</span>
+                <span class="text-[var(--gray-text-color)] text-xs">{{ organization.members }} members</span>
                 <span class="text-xs px-2 py-0.5 border border-[var(--gray-default-color)] rounded-full">pro</span>
                 <span
                     class="flex items-center text-xs px-2 py-0.5 border border-[var(--gray-default-color)] rounded-full">
@@ -39,9 +39,13 @@
         </div>
     </div>
 
-    <button class="bg-[var(--primary-color)] text-sm text-black px-3 py-2 rounded-xl font-medium">
-        Join
-    </button>
+    @if(organization.is_member) {
+        <div class="text-xs text-black bg-[var(--primary-color)] px-3 py-1 rounded-full font-medium">Already a member</div>
+    } @else {
+        <button class="bg-[var(--primary-color)] text-sm text-black px-3 py-2 rounded-xl font-medium">
+            Join
+        </button>
+    }
 </div>
 }
 }
