--- a/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
+++ b/src/app/features/organizations/org-dialog/join-tab/join-tab.component.html
@@ -18,7 +18,7 @@
     Search Results
 </label>
 @for(organization of organizations; track organization.id) {
-<div class="flex items-center justify-between text-white rounded-xl border border-gray-800 p-4 w-full ">
+<div class="flex items-center justify-between text-white rounded-xl border border-gray-800 p-4 w-full mt-2">
     <div class="flex items-center space-x-4">
         <div
             class="flex items-center justify-center w-10 h-10 rounded-full bg-[var(--primary-color)] text-white font-semibold">
@@ -42,7 +42,7 @@
     @if(organization.is_member) {
         <div class="text-xs text-black bg-[var(--primary-color)] px-3 py-1 rounded-full font-medium">Already a member</div>
     } @else {
-        <button class="bg-[var(--primary-color)] text-sm text-black px-3 py-2 rounded-xl font-medium">
+        <button (click)="joinOrganization(organization.id)" class="bg-[var(--primary-color)] text-sm text-black px-3 py-2 rounded-xl font-medium">
             Join
         </button>
     }
